--- a/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
              android:focusable="true"
     		android:focusableInTouchMode="true"
-            android:padding="@dimen/forms_inner_padding" >
+            >
             
              <TextView
 	            android:id="@+id/page_title"
@@ -48,6 +48,8 @@
 	            android:layout_alignParentLeft="true"
 	            android:layout_alignParentTop="true"
 	            android:layout_marginBottom="@dimen/forms_inner_padding"
+	            android:paddingRight="@dimen/forms_inner_padding"
+	            android:paddingLeft="@dimen/forms_inner_padding"
 	            android:text="@string/page_title" />
 
              <TextView 
@@ -57,7 +59,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/page_title"
                 android:text="@string/note_title"
-                style="@style/field_copy"/>
+                style="@style/field_copy"
+                android:paddingLeft="@dimen/forms_inner_padding"
+                android:paddingRight="@dimen/forms_inner_padding"/>
              
              
              <TextView 
@@ -68,7 +72,8 @@
                 android:layout_below="@+id/top_note_text"
                 android:visibility="gone"
                 android:text="@null"
-                style="@style/field_copy_big"/>
+                style="@style/field_copy_big"
+                android:paddingRight="@dimen/forms_inner_padding"/>
                
                                
               <TextView
@@ -112,7 +117,7 @@
             <!-- Action Button  -->
             <Button
                 android:id="@+id/actionButton"
-                style="@style/call_to_action_theme"
+                style="@style/common_call_to_action_theme_orange"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="@dimen/action_button_min_width"
