--- a/Discover-Commons/res/values/styles_common_table.xml
+++ b/Discover-Commons/res/values/styles_common_table.xml
@@ -2,7 +2,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     
     <style name="common_tab_text">
-        <item name="android:textSize">@dimen/small_copy_max</item>
+        <item name="android:textSize">@dimen/small_copy_min</item>
         <item name="android:textColor">@color/sub_copy</item>
     </style>
     
