--- a/Discover-Commons/res/values/dimens.xml
+++ b/Discover-Commons/res/values/dimens.xml
@@ -15,6 +15,8 @@
     <dimen name="modal_top_dummy_view">30dp</dimen>
     <dimen name="modal_text_padding">17dp</dimen>
     <dimen name="modal_footer_topmargin">35dp</dimen>
+    <dimen name="min_touch_region">30dp</dimen>
+    <dimen name="min_button_padding">5dp</dimen>
 
     <!-- Discover Padding -->
     <dimen name="forms_inner_padding">12dp</dimen>
