US8734: Account Summary Layout Changes TA19844: layout TA19845: list item
Account lists now span the whole width of the screen, gradients/shadows removed from list items, some title text unbolded, list item carets changed from blue to gray, last four digits changed from (xxx-x) format to (…xxxx) format.

--- a/Discover-Bank-Phone/res/layout/bank_account_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_view.xml
@@ -37,7 +37,7 @@
         android:layout_below="@+id/acct_nickname"
         android:paddingBottom="@dimen/between_related_elements_padding"
         android:text="@string/acct_balance_str"
-        style="@style/page_title"/>
+        style="@style/page_title_no_bold"/>
 	 
 	  <ImageView
         android:id="@+id/acct_carat"
@@ -45,5 +45,5 @@
         android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:background="@drawable/blue_arrow_right"/>
+        android:background="@drawable/gray_right_arrow"/>
 </RelativeLayout>
