--- a/Discover-Bank-Phone/res/layout/bank_account_group_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_group_view.xml
@@ -1,23 +1,23 @@
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     	android:layout_width="match_parent"
+     	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:paddingBottom="@dimen/groups_of_elements_padding"
-   		android:paddingLeft="@dimen/forms_inner_padding"
-        android:paddingRight="@dimen/forms_inner_padding"
    		android:orientation="vertical" >
      
 	<LinearLayout
-          android:layout_width="match_parent"
+          android:layout_width="fill_parent"
    		  android:layout_height="wrap_content"
    		  android:layout_marginTop="@dimen/between_related_elements_padding"
    		  android:layout_marginBottom="@dimen/between_related_elements_padding"
+   		  android:paddingLeft="@dimen/forms_inner_padding"
+     	  android:paddingRight="@dimen/forms_inner_padding"
    		  android:orientation="vertical" >
 	     <TextView
 	        android:id="@+id/acct_type"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:text="@string/acct_type_str"
-	        style="@style/body_copy_title"/>
+	        style="@style/body_copy_title_no_bold"/>
 	     
 	     <TextView
 	        android:id="@+id/acct_all_total"
