--- a/Discover-Bank-Phone/res/values/styles_bank.xml
+++ b/Discover-Bank-Phone/res/values/styles_bank.xml
@@ -6,6 +6,11 @@
         <item name="android:textStyle">bold</item>
     </style>
     
+    <style name="page_title_no_bold">
+        <item name="android:textColor">@color/title</item>
+        <item name="android:textSize">@dimen/title_min</item>
+    </style>
+    
     <style name="page_title_max">
         <item name="android:textColor">@color/title</item>
         <item name="android:textSize">@dimen/title_max</item>
@@ -16,6 +21,11 @@
         <item name="android:textColor">@color/body_copy</item>
         <item name="android:textSize">@dimen/body_copy_min</item>
         <item name="android:textStyle">bold</item>
+    </style>
+    
+    <style name="body_copy_title_no_bold">
+        <item name="android:textColor">@color/body_copy</item>
+        <item name="android:textSize">@dimen/body_copy_min</item>
     </style>
     
     <style name="body_copy_title_max">
