--- a/Discover-Commons/res/drawable/home_list_item_no_bottom_dash.xml
+++ b/Discover-Commons/res/drawable/home_list_item_no_bottom_dash.xml
@@ -2,22 +2,17 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
         <!-- Top Dots -->
-    <item>
+    <!-- <item>
         <shape
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle" >
-            <stroke
-                android:dashGap="2dp"
-                android:dashWidth="2dp"
-                android:width="1dp"
-                android:color="@color/field_stroke" />
 
-  			<solid android:color="@color/white" />
+  			<solid android:color="@color/field_stroke" />
         </shape>
-    </item>
+    </item> -->
    
     <!-- Sides -->
-    <item android:top="1dp">
+    <item android:top="-1dp" android:left="-1dp" android:right="-1dp">
         <shape
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle" >
@@ -28,8 +23,9 @@
             <solid android:color="@color/white" />
         </shape>
     </item>
-    <!-- Bottom Shadow -->
-    <item
+    
+     <!-- Bottom Shadow -->
+    <!-- <item
         android:left="1dp"
         android:right="1dp"
         android:top="1dp">
@@ -42,5 +38,6 @@
                 android:startColor="#FFF7F7F7" >
             </gradient>
         </shape>
-    </item>
+    </item> -->
+   
 </layer-list>
