US8734: Account Summary Layout Changes TA19844: layout TA19845: list item
Account lists now span the whole width of the screen, gradients/shadows removed from list items, some title text unbolded, list item carets changed from blue to gray, last four digits changed from (xxx-x) format to (…xxxx) format.

--- a/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
@@ -11,9 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/forms_inner_padding"
-        android:paddingLeft="@dimen/forms_inner_padding"
-        android:paddingRight="@dimen/forms_inner_padding" >
+        android:paddingBottom="@dimen/forms_inner_padding">
 
         <LinearLayout 
        	    android:id="@+id/content"
