--- a/Discover-Commons/res/values/styles.xml
+++ b/Discover-Commons/res/values/styles.xml
@@ -72,6 +72,10 @@
         <item name="android:textStyle">bold</item>
     </style>
     
+    <style name="title_unbold" parent="title_copy">
+        <item name="android:textStyle">normal</item>
+    </style>
+    
 
     <!-- 5. BODY COPY / #3d484d / 34px font-size / 42px line-height / regular -->
     <style name="title_medium" parent="discover_text">
