--- a/Discover-Commons/res/drawable/common_action_button_gray.xml
+++ b/Discover-Commons/res/drawable/common_action_button_gray.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- border line -->
-    <item>
+    <item android:top="2dp" android:left="2dp">
         <shape>
-            <solid android:color="#000000" />
+            <solid android:color="@color/action_button_drop_shadow"/>
+            <corners android:radius="2dp"/>
         </shape>
     </item>
     <item android:bottom="2dp" android:right="2dp">
         <shape>
             <solid android:color="@color/action_button_gray"></solid>
+            <corners android:radius="2dp"/>
         </shape>
     </item>
 </layer-list>
