--- a/Discover-Commons/res/drawable/common_action_button_orange_pressed.xml
+++ b/Discover-Commons/res/drawable/common_action_button_orange_pressed.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item >
-        <shape>
-            <solid android:color="#000000"/>
-        </shape>
-    </item>
     
-    <item android:bottom="2dp" android:right="2dp">
+    
+    <item android:top="2dp" android:left="2dp">
         <shape>
             <solid android:color="@color/action_button_orange_pressed"/>
+            <corners android:radius="2dp"/>
         </shape>
     </item>  
 
