--- a/Discover-Commons/res/values/color.xml
+++ b/Discover-Commons/res/values/color.xml
@@ -91,6 +91,7 @@
     <!-- Action Button Colors -->
     <color name="action_button_border">#000000</color>
     <color name="action_button_gray">#D6D6D4</color>
+    <color name="action_button_drop_shadow">#999999</color>
     <color name="action_button_gray_pressed">#a7abad</color>
     <color name="action_button_orange">#fe8738</color>
     <color name="action_button_orange_pressed">#ed4b0b</color>
