--- a/Discover-Commons/res/values/styles_common_toggle_switch.xml
+++ b/Discover-Commons/res/values/styles_common_toggle_switch.xml
@@ -10,14 +10,13 @@
         <item name="thumbTextPadding">12dip</item>
         <item name="switchMinWidth">96dip</item>
         <item name="switchPadding">16dip</item>
-        <item name="android:textColor">@color/field_copy</item>
         <item name="switchTextAppearance">@style/common_text_appearance</item>
     </style>    	
    
     <style name="common_text_appearance">
-        <item name="textColor">@color/field_copy</item>
+        <item name="textColor">@color/white</item>
         <item name="textColorHighlight">?android:attr/textColorHighlight</item>
-        <item name="textColorHint">@color/field_copy</item>
+        <item name="textColorHint">@color/black</item>
         <item name="textColorLink">?android:attr/textColorLink</item>
         <item name="textSize">16sp</item>
     </style>
