--- a/Discover-Bank-Phone/res/layout/schedule_payment.xml
+++ b/Discover-Bank-Phone/res/layout/schedule_payment.xml
@@ -145,7 +145,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:weightSum="4" >
+                        android:weightSum="3.75" >
 
                         <TextView
                             android:id="@+id/amount_title"
@@ -158,7 +158,7 @@
                             style="@style/field_copy_big"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
+                            android:layout_weight=".75"
                             android:gravity="right"
                             android:paddingRight="3dp"
                             android:text="@string/bank_dollar_sign"
@@ -193,19 +193,19 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:gravity="center_vertical" 
-                        android:weightSum="2" >
+                        android:weightSum="3.75" >
 
                         <TextView
                             android:id="@+id/date_title"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
+                            android:layout_weight="1.75"
                             android:text="@string/schedule_pay_date" />
 
                         <RelativeLayout
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1">
+                            android:layout_weight="2">
 
                             <ImageView
                                 android:id="@+id/date_icon"
