--- a/Discover-Bank-Phone/res/layout/bank_transfer_select_account.xml
+++ b/Discover-Bank-Phone/res/layout/bank_transfer_select_account.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:padding="@dimen/forms_inner_padding" >
+         >
 
         <TextView
             android:id="@+id/page_title"
@@ -22,6 +22,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginBottom="@dimen/forms_inner_padding"
+            android:paddingLeft="@dimen/forms_inner_padding"
+            android:paddingRight="@dimen/forms_inner_padding"
             android:text="@string/edit" />
 
         <RelativeLayout
@@ -36,7 +38,9 @@
                 style="@style/sub_copy_medium"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/external_accounts" />
+                android:text="@string/external_accounts"
+                android:paddingRight="@dimen/forms_inner_padding"
+                android:paddingLeft="@dimen/forms_inner_padding" />
 
             <LinearLayout
                 android:id="@+id/content_table_external_accounts"
@@ -57,7 +61,9 @@
                 android:layout_below="@+id/content_table_external_accounts"
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:text="@string/empty"
-                android:visibility="gone" />
+                android:visibility="gone"
+                android:paddingRight="@dimen/forms_inner_padding"
+                android:paddingLeft="@dimen/forms_inner_padding" />
         </RelativeLayout>
 
         <TextView
@@ -66,7 +72,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/external_accounts_layout"
-            android:text="@string/internal_accounts" />
+            android:text="@string/internal_accounts"
+            android:paddingRight="@dimen/forms_inner_padding"
+            android:paddingLeft="@dimen/forms_inner_padding" />
 
         <LinearLayout
             android:id="@+id/content_table_internal_accounts"
